src/backends/drm/drm_virtual_egl_layer.cpp
@@ -136,9 +136,10 @@ std::shared_ptr<GLTexture> VirtualEglGbmLayer::texture() const
 {
     if (m_scanoutSurface) {
         return m_eglBackend->importDmaBufAsTexture(*m_scanoutBuffer->dmabufAttributes());
-    } else {
+    } else if (m_currentSlot) {
         return m_currentSlot->texture();
     }
+    return nullptr;
 }
 
 bool VirtualEglGbmLayer::scanout(SurfaceItem *surfaceItem)
